# autoscrobbler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SERVICE_SETUP.md  autoscrobbler-user.service  autoscrobbler.service  credentials.json  credentials.json.example  pyproject.toml  setup_audio_service.sh  test_docker_audio.py  troubleshoot_audio.py
.github/workflows/: ci.yml
autoscrobbler/: __main__.py  shazam_example.json
tests/: __init__.py  conftest.py  test_audio.py  test_cli.py  test_credentials.py  test_integration.py  test_lastfm.py  test_shazam.py
