[project]
name = "autoscrobbler"
version = "0.1.0"
description = "Passive audio scrobbler: identifies songs from microphone and scrobbles to Last.fm."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.9"
dependencies = [
    "shazamio",
    "pylast",
    "sounddevice",
    "soundfile",
    "numpy"
]
[project.optional-dependencies]
dev = [
    "ruff>=0.0.292",
    "pre-commit>=3.5.0",
]

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["autoscrobbler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
